test/classes/errors/nilability-init-field-dflt/init-field-dflt-nonnil-owned-from-oknil-shared.good
init-field-dflt-nonnil-owned-from-oknil-shared.chpl:8: error: Cannot initialize lhs of non-nilable type 'owned MyClass' from a nilable 'shared MyClass?'
